array.island.Island.scala.error
Compilation error:
Island:9: error: ')' expected but '}' found.
  }
  ^